--- a/Front-End/app/src/main/res/layout/login_activity.xml
+++ b/Front-End/app/src/main/res/layout/login_activity.xml
@@ -143,7 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/karma_medium"
-        android:text="@string/activity.login.text.iniciaSesion"
+        android:text="¿Todavía no tienes cuenta?"
         android:textColor="@color/gris_HackAPP"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -158,7 +158,7 @@
         android:layout_marginTop="44dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/karma_medium"
-        android:text="@string/activity.login.text.termsAndConditions"
+        android:text="@string/app.text.termsAndConditions"
         android:textColor="@color/gris_HackAPP"
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
