--- a/Front-End/app/src/main/res/values/themes.xml
+++ b/Front-End/app/src/main/res/values/themes.xml
@@ -11,4 +11,16 @@
         <item name="android:windowEnterAnimation">@anim/slide_in_animation</item>
         <item name="android:windowExitAnimation">@anim/slide_out_animation</item>
     </style>
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:layout_width">100sp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:background">@drawable/login_edittext_shape</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:textColorHint">@color/gris_HackAPP</item>
+        <item name="android:fontFamily">@font/karma_medium</item>
+    </style>
+
+
 </resources>
