--- a/Front-End/app/src/main/res/layout/login_activity.xml
+++ b/Front-End/app/src/main/res/layout/login_activity.xml
@@ -97,15 +97,15 @@
         android:id="@+id/activity_login_button_forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="36dp"
         android:background="@android:color/transparent"
+        android:fontFamily="@font/karma_medium"
         android:text="@string/activity.login.text.forgotPass"
         android:textColor="@color/HackAPPBlue"
         android:textSize="11sp"
-        android:fontFamily="@font/karma_medium"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_login_editeText_password"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="15dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/activity_login_editeText_password" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/activity_login_button_login"
