--- a/Front-End/app/src/main/res/layout/home_fragment.xml
+++ b/Front-End/app/src/main/res/layout/home_fragment.xml
@@ -1,15 +1,50 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
+    android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".User">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageButton
+        android:id="@+id/activity_home_notis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:text="Home fragment" />
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="45dp"
+        android:src="@drawable/bell"
+        android:background="@android:color/transparent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+    <EditText
+        android:id="@+id/activity_home_search"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/search"
+        android:padding="12dp"
+        android:drawablePadding="4sp"
+        android:background="@drawable/transparent_button_color_999999"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:inputType="text"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="45dp"
+        android:backgroundTint="#999999"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/activity_home_notis"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_home_exploits"
+        android:layout_width="350dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/activity_home_search" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
