--- a/Front-End/app/src/main/res/layout/home_fragment.xml
+++ b/Front-End/app/src/main/res/layout/home_fragment.xml
@@ -31,7 +31,7 @@
         android:inputType="text"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="45dp"
         android:backgroundTint="#999999"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,9 +40,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activity_home_exploits"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/activity_home_search" />
