--- a/Front-End/app/src/main/res/layout/news_forum_card_view.xml
+++ b/Front-End/app/src/main/res/layout/news_forum_card_view.xml
@@ -57,12 +57,21 @@
                 android:layout_toRightOf="@+id/imageview_rounded"
                 >
                 <TextView
-                    android:id="@+id/exploit_title"
+                    android:id="@+id/news_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
                     android:text="Title"
                     android:textSize="18sp"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/news_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp"
+                    android:text="Description"
+                    android:textSize="13sp"
                     android:textColor="@color/black" />
 
             </LinearLayout>
