--- a/Front-End/app/src/main/res/layout/main_activity.xml
+++ b/Front-End/app/src/main/res/layout/main_activity.xml
@@ -10,8 +10,9 @@
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <!-- Bottom Navigation View -->
     <com.etebarian.meowbottomnavigation.MeowBottomNavigation
