--- a/Front-End/app/src/main/res/layout/user_fragment.xml
+++ b/Front-End/app/src/main/res/layout/user_fragment.xml
@@ -50,76 +50,87 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_user_username" />
 
-    <TextView
-        android:id="@+id/fragment_user_number_post"
+    <LinearLayout
+        android:id="@+id/fragment_user_post_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="100dp"
-        android:text=""
-        android:textColor="@color/white"
-        android:textSize="18sp"
+        android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@id/fragment_user_image"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/fragment_user_text_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:text="@string/fragment_user_posts"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@id/fragment_user_image"
-        app:layout_constraintTop_toBottomOf="@id/fragment_user_number_post" />
-
-    <TextView
-        android:id="@+id/fragment_user_number_followers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="100dp"
-        android:text=""
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/fragment_user_number_post"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="50dp">
 
-    <TextView
-        android:id="@+id/fragment_user_text_followers"
+        <TextView
+            android:id="@+id/fragment_user_number_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/fragment_user_text_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_user_posts"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fragment_user_followers_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/fragment_user_text_post"
-        app:layout_constraintTop_toBottomOf="@id/fragment_user_number_followers"
-        android:layout_marginStart="30dp"
-        android:text="@string/fragment_user_followers"
-        android:textSize="14sp"
-        android:textColor="@color/white"/>
-
-    <TextView
-        android:id="@+id/fragment_user_number_follows"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@id/fragment_user_post_layout"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="100dp"
-        android:text=""
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/fragment_user_number_followers"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="30dp">
+        <TextView
+            android:id="@+id/fragment_user_number_followers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_gravity="center"/>
 
-    <TextView
-        android:id="@+id/fragment_user_text_follows"
+        <TextView
+            android:id="@+id/fragment_user_text_followers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_user_followers"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fragment_user_follows_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/fragment_user_text_followers"
-        app:layout_constraintTop_toBottomOf="@id/fragment_user_number_follows"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:text="@string/fragment_user_follows"
-        android:textSize="14sp"
-        android:textColor="@color/white"/>
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@id/fragment_user_followers_layout"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="30dp">
+        <TextView
+            android:id="@+id/fragment_user_number_follows"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/fragment_user_text_follows"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_user_follows"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
+    </LinearLayout>
 
 
     <RelativeLayout
