--- a/Front-End/app/src/main/res/layout/user_fragment.xml
+++ b/Front-End/app/src/main/res/layout/user_fragment.xml
@@ -40,7 +40,7 @@
         app:layout_constraintStart_toEndOf="@id/fragment_user_username"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/fragment_user_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
