--- a/Front-End/app/src/main/res/layout/login_activity.xml
+++ b/Front-End/app/src/main/res/layout/login_activity.xml
@@ -164,7 +164,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_login_button_crearCuenta" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <View
         android:layout_width="0dp"
