--- a/Front-End/app/src/main/res/layout/news_forum_card_view.xml
+++ b/Front-End/app/src/main/res/layout/news_forum_card_view.xml
@@ -63,16 +63,22 @@
                     android:layout_marginBottom="3dp"
                     android:text="Title"
                     android:textSize="18sp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:layout_marginEnd="15dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"/>
 
                 <TextView
                     android:id="@+id/news_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
+                    android:layout_marginEnd="15dp"
                     android:text="Description"
                     android:textSize="13sp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:maxLines="1"
+                    android:ellipsize="end"/>
 
             </LinearLayout>
 
