--- a/Front-End/app/src/main/res/layout/activity_noti.xml
+++ b/Front-End/app/src/main/res/layout/activity_noti.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".noti_activity">
+    tools:context=".NotificationsActivity">
 
     <TextView
         android:id="@+id/activity_notifications_username"
