--- a/Front-End/app/src/main/res/layout/news_view_activity.xml
+++ b/Front-End/app/src/main/res/layout/news_view_activity.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg"
-    tools:context=".news_view">
+    tools:context=".NewsView">
 
     <ImageButton
         android:id="@+id/fragment_news_view_et_userImg"
