--- a/Front-End/app/src/main/res/layout/home_fragment.xml
+++ b/Front-End/app/src/main/res/layout/home_fragment.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".User">
+    tools:context=".Usuario">
 
     <ImageButton
         android:id="@+id/activity_home_notis"
