--- a/Front-End/app/src/main/res/layout/upload__forum_fragment.xml
+++ b/Front-End/app/src/main/res/layout/upload__forum_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg"
-    tools:context=".UploadForum">
+    tools:context=".SubirForum">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fragment_upload_forum_buttons"
