--- a/Front-End/app/src/main/res/layout/user_settings_activity.xml
+++ b/Front-End/app/src/main/res/layout/user_settings_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".UserSettings">
+    tools:context=".OpcionesUsuario">
 
     <ImageView
         android:id="@+id/activity_user_settings_img"
