Añadidos datos a la BBDD y correciones en el codigo

--- a/Front-End/app/src/main/res/layout/friend_request_cell.xml
+++ b/Front-End/app/src/main/res/layout/friend_request_cell.xml
@@ -57,7 +57,7 @@
                 android:layout_toRightOf="@+id/imageview_rounded">
 
                 <TextView
-                    android:id="@+id/username"
+                    android:id="@+id/Usuario"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
