--- a/Front-End/app/src/main/res/layout/create_acc.xml
+++ b/Front-End/app/src/main/res/layout/create_acc.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/activity_creatAcc_hackAppLogo"
-        android:layout_width="117dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/hackapp_logo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@id/activitycreatAcc"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="35dp"/>
+        android:layout_marginTop="15dp"/>
 
     <EditText
         android:id="@+id/activity_login_editeText_secondName"
@@ -100,7 +100,7 @@
         android:layout_marginTop="15dp"/>
 
     <EditText
-        android:id="@+id/activity_creatAcc_editeText_password"
+        android:id="@+id/activity_creatAcc_editeText_clave"
         android:layout_width="280sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -119,18 +119,18 @@
         app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_email" />
 
     <ImageButton
-        android:id="@+id/activity_creatAcc_imagButton_password"
+        android:id="@+id/activity_creatAcc_imagButton_clave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:background="?attr/selectableItemBackground"
         android:src="@drawable/check_pass_open"
-        app:layout_constraintStart_toEndOf="@+id/activity_creatAcc_editeText_password"
+        app:layout_constraintStart_toEndOf="@+id/activity_creatAcc_editeText_clave"
         app:layout_constraintTop_toBottomOf="@+id/activity_creatAcc_editeText_email" />
 
     <EditText
-        android:id="@+id/activity_creatAcc_editeText_username"
+        android:id="@+id/activity_creatAcc_editeText_Usuario"
         android:layout_width="320sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -138,24 +138,24 @@
         android:drawableLeft="@drawable/person"
         android:drawablePadding="4sp"
         android:fontFamily="@font/karma_medium"
-        android:hint="@string/activity.createAcc.hint.username"
+        android:hint="@string/activity.createAcc.hint.Usuario"
         android:inputType="text"
         android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="#878787"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_password" />
+        app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_clave" />
 
     <Spinner
         android:id="@+id/activity_creatAcc_spinner_cc"
         style="@style/SpinnerStyle"
         android:layout_marginStart="36dp"
         android:layout_marginTop="16dp"
-        android:hint="@string/activity.createAcc.hint.username"
+        android:hint="@string/activity.createAcc.hint.Usuario"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_username" />
+        app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_Usuario" />
 
     <EditText
         android:id="@+id/activity_creatAcc_editeText_telefono"
@@ -175,7 +175,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.212"
         app:layout_constraintStart_toEndOf="@+id/activity_creatAcc_spinner_cc"
-        app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_username" />
+        app:layout_constraintTop_toBottomOf="@id/activity_creatAcc_editeText_Usuario" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/activity_creatAcc_button_crearCuanta"
@@ -211,7 +211,7 @@
         android:id="@+id/activity_login_text_crearAcc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/karma_medium"
         android:text="¿Ya tienes una cuenta?"
         android:textColor="@color/gris_HackAPP"
